# glasspy

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  MANIFEST.in  README.md  README_PyPI.md  pyproject.toml  requirements.txt  setup.py
doc/examples/: finding_the_kauzmann_temperature.ipynb  regression_of_viscosity_data.ipynb
doc/examples/nucleation/: regression_of_nucleation_density_data.ipynb
doc/logo/: LICENSE
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/intro/: examples.rst  install.rst
docs/source/logo/: glasspy.pptx  glasspy2.pptx
docs/source/modules/: glasspy.chemistry.rst  glasspy.data.rst  glasspy.predict.rst  glasspy.rst  glasspy.viscosity.rst  modules.rst
glasspy/: .style.yapf  __init__.py  support.py  typing.py  utils.py
glasspy/chemistry/: __init__.py  convert.py  data.py  featurizer.py  fingerprint.py  types.py
glasspy/chemistry/data/: chemical_properties.csv
glasspy/data/: __init__.py  analysis.py  load.py  manipulate.py  translators.py  viscosity.py
glasspy/data/datafiles/: sciglass.csv.xz
glasspy/legacy/data/: analysis.py
glasspy/legacy/nucleation/: kineticmodel.py  regression.py
glasspy/legacy/thermodynamics/: gibbs.py  heatcapacity.py
glasspy/legacy/viscosity/: equilibrium.py  equilibrium_log.py
glasspy/nucleation/: density.py  kineticmodel.py  rate.py  regression.py
glasspy/predict/: __init__.py  base.py  models.py
glasspy/relaxation/: kohlrausch.py  relaxation.py
glasspy/thermodynamics/: enthalpy.py  entropy.py  heatcapacity.py
glasspy/viscosity/: diffusion.py  equilibrium.py  equilibrium_log.py  regression.py
(+41 files in other folders)
